# barrage_rust

./: Cargo.toml  Get_DY_Barrage.py  README.md  danmu_requirments.txt  douyu_danmu.py  go.mod  main.go
results/: MQ丶孙悟空.xlsx
src/: main.rs
