[package]
name = "douyu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.14"
tokio = { version = "1", features = ["full"] }
url = "2.4.0"
futures = "0.3"
tokio-tungstenite = {version = "0.19.0", features = ["native-tls", "__rustls-tls"]}
native-tls = "0.2.11"
websocket = "0.26.5"
